[gd_scene load_steps=3 format=2]

[ext_resource path="res://fonts/arial_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="Button4" type="Button" parent="GridContainer"]
margin_right = 638.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Random Noise
Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 140.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Open Simplex
Noise Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="GridContainer"]
margin_top = 144.0
margin_right = 638.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Wave Function
Collapse Demo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_left = 642.0
margin_top = 144.0
margin_right = 1280.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Grid Paint"

[node name="Button5" type="Button" parent="GridContainer"]
margin_top = 288.0
margin_right = 638.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Load Texture"

[node name="Button6" type="Button" parent="GridContainer"]
margin_left = 642.0
margin_top = 288.0
margin_right = 1280.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "XML Texture Atlas"

[node name="Button7" type="Button" parent="GridContainer"]
margin_top = 432.0
margin_right = 638.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button7"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Wave Function
Collapse Demo 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="GridContainer"]
margin_left = 642.0
margin_top = 432.0
margin_right = 1280.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button8"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "File IO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="GridContainer"]
margin_top = 576.0
margin_right = 638.0
margin_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )

[node name="Label" type="Label" parent="GridContainer/Button9"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Load Single Tile"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
